@@ -1,7 +1,8 @@
 BEEBEEP (Secure Network Chat)
 
 BeeBEEP 0.9.5
-- option: load minimized at startup 
+- Option: load minimized at startup 
+- View: log window
 
 BeeBEEP 0.9.4
 - Use default password without prompt at startup
